--- a/crud_car/android/app/src/main/AndroidManifest.xml
+++ b/crud_car/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.crud_car">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="crud_car"
         android:icon="@mipmap/ic_launcher">
